# sink-splitter

./: Cargo.toml  README.md
src/: lib.rs
