[package]
name = "sink-splitter"
description = "An input Sink that routes each item to one of many output sinks"
readme = "README.md"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sink-splitter"
repository = "https://github.com/paulkernfeld/sink-splitter"

[dependencies]
futures  = "0.1"

[dev-dependencies]
error-test-sinks = "0.1"
